# Arkanoid

./: CMakeLists.txt  CheckLibs.cmake  Doxyfile  FindLuabind.cmake  FindOGG.cmake  FindVorbisFile.cmake  config.h.in
Box2D/: CMakeLists.txt
FTGL/: CMakeLists.txt  CheckLibs.cmake  config.h.in  configure
FTGL/src/: CMakeLists.txt  FTContour.cpp
FTGL/src/FTFont/: CMakeLists.txt
FTGL/src/FTGL/: CMakeLists.txt
FTGL/src/FTGlyph/: CMakeLists.txt
FTGL/src/FTLayout/: CMakeLists.txt
Luabind/: CMakeLists.txt  CheckLibs.cmake
Luabind/luabind/detail/: call_function.hpp
TinyXML/: CMakeLists.txt  Makefile  cmake_install.cmake  tinyxml.cpp  tinyxml.h
include/: Application.hpp  Engine.hpp  LuaAPI.hpp  Server.hpp  Utils.hpp  doxygen_main_page.hpp  geometry_defines.hpp  gl_includes.h  oal_includes.h  salt_defines.h  ui_defines.h
include/Engine/: AnimationSprite.hpp  Ball.hpp  Block.hpp  Camera.hpp  Client.hpp  Collision.hpp  Controller.hpp  DebugOutput.hpp  Direction.hpp  DirectionToCoordsArray.h  DynamicObject.hpp  EasyBlock.hpp  Game.hpp  GameStates.hpp  ICameraUpdater.hpp  IController.hpp  IRenderer.hpp  ISprite.hpp  IUpdatable.hpp  Level.hpp  LevelManager.hpp  Location.hpp  LocationLayer.hpp  Object.hpp  PCClient.hpp  Platform.hpp  Player.hpp  Point.hpp  Renderer.hpp  SaltEngine.hpp  StaticObject.hpp  StaticSprite.hpp  World.hpp  WorldLayer.hpp
include/Engine/GameStates/: IGameState.hpp  LoadingState.hpp  MenuState.hpp  SingleGameState.hpp  StartLogoState.hpp
include/Exceptions/: already_exist_error.hpp
include/LuaAPI/: Block_wrapper.hpp  Box_wrapper.hpp  LuaAPI.hpp  Object_wrapper.hpp  Point_wrapper.hpp  Sprite_wrapper.hpp
include/TinyXML/: tinyxml.h
include/Utils/: AnimationSprite.hpp  Audio.hpp  Color.hpp  FreeType.hpp  GLTexturePool.hpp  Graphics.hpp  ISprite.hpp  LocalizationManager.hpp  Lua.hpp  MouseButton.hpp  PCResourceLoader.hpp  PNGTextureBuilder.hpp  PlainText.hpp  Resource.hpp  ResourceFile.hpp  ResourceLoader.hpp  ResourceManager.hpp  Singleton.hpp  SingletonPointer.hpp  SingletonPtr.hpp  Sound.hpp  Sprite.hpp  SpriteFactory.hpp  StaticSprite.hpp  Texture.hpp  TextureFactory.hpp  TextureManager.hpp  UI.hpp  assert.hpp  buffer.h
include/Utils/Audio/: AudioManager.hpp  Buffer.hpp  Buffer.hpp~  IStream.hpp  IStream.hpp~  OGGSound.hpp  OGGSoundBuilder.hpp  OGGSoundFactory.hpp  OGGStream.hpp  PCMSound.hpp  PCMStream.hpp  Sound.hpp  SoundPlayer.hpp
include/Utils/FreeType/: Font.hpp  FontManager.hpp  Library.hpp
include/Utils/Graphics/: AnimationSprite.hpp  Graphics.hpp  GraphicsManager.hpp  PNGTextureBuilder.hpp  PNGTextureFactory.hpp  Sprite.hpp  SpriteBuilder.hpp  SpriteFactory.hpp  StaticSprite.hpp  Texture.hpp  TextureManager.hpp
include/Utils/OpenAL/: Audio.hpp  Buffer.hpp  IStream.hpp  OGGSound.hpp  OGGSoundBuilder.hpp  OGGStream.hpp  PCMSound.hpp  PCMStream.hpp  Sound.hpp  SoundPlayer.hpp
include/Utils/UI/: Button.hpp  Component.hpp  ComponentBuilder.hpp  ComponentEvent_wrapper.hpp  ComponentFactory.hpp  Container.hpp  Dialog.hpp  Event.hpp  KeyEvent.hpp  Label.hpp  LoadingAnimation.hpp  Menu.hpp  MenuBuilder.hpp  MenuFactory.hpp  MouseEvent.hpp  Picture.hpp
protocols/: Box.proto  Point.proto  Resource.proto  StaticObject.proto  World.proto
resources/levels/: levels  lol.lvl  sea.lvl  space.lvl
resources/locale/: en_US.xml  ru_RU.xml  uk_UA.xml  zh_CN.xml
resources/scripts/: init.lua  main_menu.lua  metal_block.lua  option_menu.lua  pause_menu.lua  simple_block.lua  stronger_block.lua  weak_block.lua
resources/sprites/: platform.sprite
resources/ui/: main_menu.xml  option_menu.xml  pause_menu.xml
src/: Application.cpp  Server.cpp  main.cpp  resource.rc  server.cpp
src/Engine/: AnimationSprite.cpp  Ball.cpp  Block.cpp  DebugOutput.cpp  DynamicObject.cpp  EasyBlock.cpp  Game.cpp  ISprite.cpp  Level.cpp  LevelManager.cpp  Location.cpp  LocationLayer.cpp  Object.cpp  Platform.cpp  Renderer.cpp  SaltEngine.cpp  StaticObject.cpp  StaticSprite.cpp  World.cpp  WorldLayer.cpp
src/Engine/GameStates/: LoadingState.cpp  MenuState.cpp  SingleGameState.cpp  StartLogoState.cpp
src/LuaAPI/: Block_wrapper.cpp  LuaAPI.cpp  Object_wrapper.cpp  Sprite_wrapper.cpp
src/TinyXML/: CMakeLists.txt  tinyxml.cpp  tinyxmlparser.cpp
src/Utils/: AnimationSprite.cpp  Audio.cpp  Graphics.cpp  ISprite.cpp  LocalizationManager.cpp  Lua.cpp  PCResourceLoader.cpp  PNGTextureBuilder.cpp  PlainText.cpp  Resource.cpp  ResourceFile.cpp  ResourceLoader.cpp  ResourceManager.cpp  Sound.cpp  Sprite.cpp  StaticSprite.cpp  Texture.cpp  TextureFactory.cpp  TextureManager.cpp  Utils.cc
src/Utils/Audio/: Audio.cpp~  AudioManager.cpp  Buffer.cpp  IStream.cpp  OGGSound.cpp  OGGSoundBuilder.cpp  OGGSoundFactory.cpp  OGGStream.cpp  PCMSound.cpp  PCMStream.cpp  Sound.cpp  SoundPlayer.cpp
src/Utils/FreeType/: Font.cpp  FontManager.cpp  Library.cpp
src/Utils/Graphics/: AnimationSprite.cpp  Graphics.cpp  GraphicsManager.cpp  PNGTextureBuilder.cpp  PNGTextureFactory.cpp  Sprite.cpp  SpriteBuilder.cpp  SpriteFactory.cpp  StaticSprite.cpp  Texture.cpp  TextureManager.cpp
src/Utils/OpenAL/: Audio.cpp  Buffer.cpp  IStream.cpp  OGGSound.cpp  OGGSoundBuilder.cpp  OGGStream.cpp  PCMSound.cpp  PCMStream.cpp  Sound.cpp  SoundPlayer.cpp
src/Utils/UI/: Button.cpp  Component.cpp  ComponentBuilder.cpp  ComponentFactory.cpp  Container.cpp  Dialog.cpp  Label.cpp  LoadingAnimation.cpp  Menu.cpp  MenuBuilder.cpp  MenuFactory.cpp  Picture.cpp
tests/: CMakeLists.txt
tests/AudioTest/: CMakeLists.txt  main.cpp
tests/OALTest/: CMakeLists.txt  main.cpp
